--- a/_config.yml
+++ b/_config.yml
@@ -23,17 +23,14 @@ description: Quickly build a beautiful Jekyll website
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+#avatar: "/img/avatar-icon.png"
 
 # List of links in the navigation bar
 navbar-links:
-  Home: ""
-  Resources:
-    - Getting started: "getstarted"
-    - Featured users: "featured-users"
-    - Project page: "https://github.com/daattali/beautiful-jekyll#readme"
-  About me: "http://deanattali.com"
-  Support me: "http://deanattali.com/aboutme/#feed-meeee"
+  #Home: "http://gmlaudone.github.io/"
+  Resources: "http://gmlaudone.github.io/CHMPython/resources"
+  Assessment: "http://gmlaudone.github.io/CHMPython/assessment"
+  Workshops: "http://gmlaudone.github.io/CHMPython/outline"
 
 # --- Footer options --- #
 
