--- a/_config.yml
+++ b/_config.yml
@@ -85,21 +85,18 @@ permalink: /:year-:month-:day-:title/
 paginate: 5
 
 # Default YAML values (more information on Jekyll's site)
-defaults:
   -
     scope:
       path: ""
       type: "posts"
     values:
-      layout: "post"
-      comments: true  # add comments to all blog posts 
-      show-share: true # add sharing buttons to all blog posts
-      social-share: true # add social media sharing buttons to all blog posts
+      comments: true  # add comments to all blog posts
   -
     scope:
       path: "" # all files
     values:
-      layout: "page"
+      layout: "default"
+
 
 # Exclude these files from production site
 exclude:
