--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ share-links-active:
 timezone: "Europe/London"
 markdown: kramdown
 highlighter: rouge
-permalink: /:year-:month-:day-:title/
+permalink: /:year-:month-:day-:title
 paginate: 5
 
 # Default YAML values (more information on Jekyll's site)
