--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@
 #baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
-url: "https://gmlaudone.github.io/CHMPython"
-baseurl: ""
+url: "https://gmlaudone.github.io"
+baseurl: "CHMPython/"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
 
@@ -81,7 +81,7 @@ share-links-active:
 timezone: "Europe/London"
 markdown: kramdown
 highlighter: rouge
-permalink: /:year-:month-:day-:title
+permalink: /:title
 paginate: 5
 
 # Default YAML values (more information on Jekyll's site)
