--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 
 # If you are building a GitHub project page then use these settings:
 url: "http://gmlaudone.github.io/CHMPython"
-baseurl: ""
+baseurl: "/CHMPython"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
 
